--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   googleapis_auth: ^2.0.0
   mockito: ^5.6.1
   fake_async: ^1.3.3
+  permission_handler: ^12.0.1
+  path_provider: ^2.1.5
+  record: ^6.1.2
   
   
 
