--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,12 +51,11 @@ dependencies:
   cloudinary_public: ^0.23.1
   path: ^1.9.1
   googleapis_auth: ^2.0.0
-  mockito: ^5.6.1
-  fake_async: ^1.3.3
   permission_handler: ^12.0.1
   path_provider: ^2.1.5
   record: ^6.1.2
   audioplayers: ^6.5.1
+  flutter_dotenv: ^6.0.0
   
   
 
@@ -83,7 +82,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
