--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   record: ^6.1.2
   audioplayers: ^6.5.1
   flutter_dotenv: ^6.0.0
+  photo_view: ^0.15.0
+  share_plus: ^12.0.1
   
   
 
